RESOLVED FIXED228205
[iOS] Unable to open arxiv links on Chrome
https://bugs.webkit.org/show_bug.cgi?id=228205
Summary [iOS] Unable to open arxiv links on Chrome
Aditya Keerthi
Reported 2021-07-22 15:48:00 PDT
...
Attachments
Patch (3.86 KB, patch)
2021-07-22 15:56 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-07-22 15:48:22 PDT
Aditya Keerthi
Comment 2 2021-07-22 15:56:43 PDT
EWS
Comment 3 2021-07-22 19:14:18 PDT
Committed r280214 (239901@main): <https://commits.webkit.org/239901@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434043 [details].
Note You need to log in before you can comment on or make changes to this bug.